# karp-client-py

./: Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml  spec.json
.github/workflows/: check.yml  release.yml  scheduled.yml  test.yml
cue.mod/: module.cue
examples/: query-karp-async.py  query-karp.py
internal/ci/github/: check.cue  ci_tool.cue  release.cue  scheduled.cue  test.cue  workflows.cue
src/karp_api_client/: __init__.py  cli.py  client.py  errors.py  shared.py  types.py
src/karp_api_client/api/querying/: __init__.py  query.py
src/karp_api_client/dsl/: __init__.py  query.py
src/karp_api_client/models/: __init__.py  entry_dto.py  entry_dto_entry.py  http_validation_error.py  query_response.py  validation_error.py
tests/: test_dsl.py
tests/__snapshots__/: test_dsl.ambr
