[project]
name = "karp-api-client"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Språkbanken Text", email = "sb-info@svenska.gu.se" },
    { name = "Kristoffer Andersson", email = "kristoffer.andersson@gu.se" },
]
requires-python = ">=3.9"
dependencies = ["attrs>=24.3.0", "httpx>=0.28.1", "returns>=0.23.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "anyio>=4.8.0",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-coverage>=0.0",
    "ruff>=0.9.2",
    "syrupy>=4.8.1",
]
